--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="NWAD.js"></script>
+    <script src="web.js"></script>
   </body>
 </html>
