Add React DOM router

--- a/web/src/main/resources/index.html
+++ b/web/src/main/resources/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>web</title>
+    <title>NWAD</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
   </head>
   <body>
     <div id="root"></div>
-    <script src="web.js"></script>
+    <script src="/web.js"></script>
   </body>
 </html>
